crates/tests/end-to-end/tests/snapshots/git_proxy__proxy_branch_deletion.snap
---
source: crates/tests/end-to-end/tests/git_proxy.rs
expression: "diagnostics(&rejected, root, proxy_port)"
---
To ssh://127.0.0.1:[PORT]/127.0.0.1/[TEMP]/upstream.git
 ! [remote rejected] tasks/fix (branch `refs/heads/tasks/fix` cannot be deleted; pushes must preserve history)
error: failed to push some refs to 'ssh://127.0.0.1:[PORT]/127.0.0.1/[TEMP]/upstream.git'
