crates/tests/end-to-end/tests/snapshots/git_proxy__proxy_exact_branch_rewrite.snap
---
source: crates/tests/end-to-end/tests/git_proxy.rs
expression: "diagnostics(&rejected, root, proxy_port)"
---
To ssh://127.0.0.1:[PORT]/127.0.0.1/[TEMP]/upstream.git
 ! [remote rejected] HEAD~2 -> main (gateway history validation failed: non-fast-forward update to `refs/heads/main` rejected; gateway preserves history)
error: failed to push some refs to 'ssh://127.0.0.1:[PORT]/127.0.0.1/[TEMP]/upstream.git'
