crates/tests/end-to-end/tests/snapshots/git_proxy__proxy_unauthorized_branch.snap
---
source: crates/tests/end-to-end/tests/git_proxy.rs
expression: "diagnostics(&rejected, root, proxy_port)"
---
To ssh://127.0.0.1:[PORT]/127.0.0.1/[TEMP]/upstream.git
 ! [remote rejected] tasks/mixed -> tasks/mixed (branch ref `refs/heads/wrong` is outside the write policy)
 ! [remote rejected] wrong -> wrong (branch ref `refs/heads/wrong` is outside the write policy)
error: failed to push some refs to 'ssh://127.0.0.1:[PORT]/127.0.0.1/[TEMP]/upstream.git'
